--- a/app/src/main/res/layout/activity_select_single_image.xml
+++ b/app/src/main/res/layout/activity_select_single_image.xml
@@ -14,7 +14,7 @@
             android:id="@+id/bt_select_single"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="选择一张图片并压缩"
+            android:text="@string/str_ando_file_select_one_and_compress"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:textSize="@dimen/font_13" />
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="错误信息"
+            android:hint="@string/str_ando_file_error_info"
             android:padding="3dp"
             android:textColor="@android:color/holo_red_dark"
             android:textColorHint="@color/color_font_black"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:hint="选择结果"
+            android:hint="@string/str_ando_file_select_result"
             android:padding="3dp"
             android:textColor="@color/color_font_black"
             android:textColorHint="@color/color_font_black"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:text="原图"
+            android:text="@string/str_ando_file_original_image"
             android:textStyle="bold"
             android:textColor="@color/color_main_theme_dark"
             android:visibility="visible"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:padding="3dp"
             android:textStyle="bold"
-            android:text="压缩后"
+            android:text="@string/str_ando_file_after_compression"
             android:textColor="@color/color_main_theme_dark"
             android:visibility="visible"
             tools:visibility="visible" />
