--- a/app/src/main/res/layout/activity_file_info.xml
+++ b/app/src/main/res/layout/activity_file_info.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
-            android:text="清除缓存"
+            android:text="@string/str_ando_file_clear_cache"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_13" />
 
