--- a/app/src/main/res/layout/activity_select_multi_files.xml
+++ b/app/src/main/res/layout/activity_select_multi_files.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:padding="3dp"
-        android:text="当前策略:"
+        android:text="@string/str_ando_file_current_strategy"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="@dimen/font_10"
         android:textStyle="bold" />
@@ -25,8 +25,8 @@
         android:id="@+id/bt_select_multi"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dp_38"
-        android:layout_marginTop="@dimen/dp_3"
-        android:text="选择多个文件 (0)"
+        android:layout_marginTop="@dimen/dp_2"
+        android:text="@string/str_ando_file_select_multiple"
         android:textColor="@android:color/white"
         android:textSize="@dimen/font_11"
         android:textStyle="bold" />
@@ -35,11 +35,11 @@
         android:id="@+id/tv_error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="错误信息"
+        android:hint="@string/str_ando_file_error_info"
         android:padding="3dp"
         android:textColor="@android:color/holo_red_dark"
         android:textColorHint="@color/color_font_black"
-        android:textSize="11sp"
+        android:textSize="@dimen/font_11"
         android:textStyle="bold"
         android:visibility="visible" />
 
