--- a/library_downloader/src/main/res/layout/item_point_detail_download2.xml
+++ b/library_downloader/src/main/res/layout/item_point_detail_download2.xml
@@ -87,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始"
+        android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintHorizontal_bias="1"
