--- a/sample_java/src/main/res/layout/activity_main.xml
+++ b/sample_java/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="选择一张图片并压缩"
+            android:textAllCaps="false"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:visibility="visible" />
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试打开音视频文件"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             android:visibility="gone" />
