--- a/library_core/src/main/res/xml/ando_file_paths.xml
+++ b/library_core/src/main/res/xml/ando_file_paths.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <!--context.getFilesDir()-->
+    <!-- Context.getFilesDir() -->
     <files-path
         name="ando_files"
         path="." />
 
-    <!--context.getCacheDir()-->
+    <!-- Context.getCacheDir() -->
     <cache-path
         name="ando_cache"
         path="." />
 
-    <!--context.getExternalFilesDirs()-->
+    <!-- ContextCompat.getExternalFilesDirs() -->
     <external-files-path
         name="ando_external_files"
         path="." />
 
-    <!-- getExternalCacheDirs() 此标签需要 support 25.0.0以上才可以使用-->
+    <!-- ContextCompat.getExternalCacheDirs() 此标签需要 support 25.0.0以上才可以使用 -->
     <external-cache-path
         name="ando_external_cache"
         path="." />
 
-    <!-- Environment.getExternalStorageDirectory()-->
-    <!--   path="Android/data/包名/"  -->
+    <!-- Environment.getExternalStorageDirectory() -->
+    <!--  path="Android/data/包名/"  -->
     <external-path
         name="ando_external_path"
         path="." />
