--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,159 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/dp_15"
-    android:paddingTop="@dimen/dp_10"
-    android:paddingRight="@dimen/dp_15"
-    android:paddingBottom="@dimen/dp_10"
-    tools:context=".ui.MainActivity">
+    android:padding="@dimen/dp_10">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/str_ando_file_title_core"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_12"
-        android:textStyle="bold" />
-
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="caseGetFileMimeType"
-        android:text="@string/str_ando_file_get_mime"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseGetFileSize"
-        android:text="@string/str_ando_file_get_size"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/str_ando_file_title_core"
+            android:textColor="@color/black"
+            android:textSize="@dimen/font_12"
+            android:textStyle="bold" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseGetFileUriOrPath"
-        android:text="@string/str_ando_file_get_uri_path"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseGetFileMimeType"
+            android:text="@string/str_ando_file_get_mime"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseOpenFileByUri"
-        android:text="@string/str_ando_file_open"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12"
-        android:visibility="gone" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseGetFileSize"
+            android:text="@string/str_ando_file_get_size"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseFileUtils"
-        android:text="@string/str_ando_file_common_utils"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12"
-        android:visibility="visible" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseGetFileUriOrPath"
+            android:text="@string/str_ando_file_get_uri_path"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/color_divider_gray" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseOpenFileByUri"
+            android:text="@string/str_ando_file_open"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12"
+            android:visibility="gone" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/str_ando_file_title_selector"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_12"
-        android:textStyle="bold" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseFileUtils"
+            android:text="@string/str_ando_file_common_utils"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12"
+            android:visibility="visible" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseSelectSingleImageWithCompress"
-        android:text="@string/str_ando_file_select_one_and_compress"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/color_divider_gray" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseSelectMultiImageWithCompress"
-        android:text="@string/str_ando_file_select_multiple_and_compress"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/str_ando_file_title_selector"
+            android:textColor="@color/black"
+            android:textSize="@dimen/font_12"
+            android:textStyle="bold" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseSelectMultiFilesWithCompress"
-        android:text="@string/str_ando_file_select_multiple_diff"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseSelectSingleImageWithCompress"
+            android:text="@string/str_ando_file_select_one_and_compress"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseSelectCustomFileType"
-        android:text="@string/str_ando_file_select_custom_type"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseSelectMultiImageWithCompress"
+            android:text="@string/str_ando_file_select_multiple_and_compress"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseFragmentSimpleUsage"
-        android:text="@string/str_ando_file_title_fragment"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12"
-        android:visibility="visible" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseSelectMultiFilesWithCompress"
+            android:text="@string/str_ando_file_select_multiple_diff"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseClearCache"
-        android:text="@string/str_ando_file_select_get_directory_info"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseSelectCustomFileType"
+            android:text="@string/str_ando_file_select_custom_type"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/color_divider_gray" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseFragmentSimpleUsage"
+            android:text="@string/str_ando_file_title_fragment"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12"
+            android:visibility="visible" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/str_ando_file_select_diff"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_12"
-        android:textStyle="bold" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseClearCache"
+            android:text="@string/str_ando_file_select_get_directory_info"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseMediaStore"
-        android:text="@string/str_ando_file_title_media_store"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/color_divider_gray" />
 
-    <Button
-        android:id="@+id/SAF_Btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="caseSAF"
-        android:text="@string/str_ando_file_title_saf"
-        android:textAllCaps="false"
-        android:textSize="@dimen/font_12" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/str_ando_file_select_diff"
+            android:textColor="@color/black"
+            android:textSize="@dimen/font_12"
+            android:textStyle="bold" />
 
-</LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseMediaStore"
+            android:text="@string/str_ando_file_title_media_store"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
+
+        <Button
+            android:id="@+id/SAF_Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="caseSAF"
+            android:text="@string/str_ando_file_title_saf"
+            android:textAllCaps="false"
+            android:textSize="@dimen/font_12" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
