--- a/app/src/main/res/layout/activity_file_core.xml
+++ b/app/src/main/res/layout/activity_file_core.xml
@@ -37,7 +37,7 @@
         <TextView
             android:id="@+id/tv_result"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:hint="@string/str_ando_file_select_result"
