--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#23ADE5</color>
-    <color name="colorPrimaryDark">#CC23ADE5</color>
+    <color name="colorPrimaryDark">#23ADE5</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="color_divider_gray">#918D8D</color>
-
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
