--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,6 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
     <style name="MainTheme" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
@@ -17,6 +16,15 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowDisablePreview">true</item>
+    </style>
+
+    <style name="FileButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:padding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:minHeight">@dimen/dp_36</item>
+        <item name="android:layout_marginTop">@dimen/dp_5</item>
     </style>
 
 </resources>
