--- a/app/src/main/res/layout/activity_file_core.xml
+++ b/app/src/main/res/layout/activity_file_core.xml
@@ -21,6 +21,18 @@
             android:textSize="@dimen/font_12"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/bt_select_single2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/str_ando_file_select_multiple_get_info"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/font_12"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/tv_error"
             android:layout_width="match_parent"
